--- a/converter.html
+++ b/converter.html
@@ -19,12 +19,12 @@
     </div>
 
     <div class= "flexCol">
-        <label class= "inputValue">Value</label>
+        <label class="inputValue">Value</label>
         <input id= "input" type= "number">
     </div>
 
     <div class= "flexCol">
-        <button id= "inputButton" onclick= "calcCelsius()">Calculate</button>
+        <button id="inputButton" onclick="calcCelsius()">Calculate</button>
     </div>
 
     <div class= "bottom">
@@ -32,7 +32,7 @@
         <label id= "outputCelsius" class= "align"></label>
     </div>
 
-
+    <p id="answer"></p>
 
 
     <script src="script.js"></script>
