--- a/converter.html
+++ b/converter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperature Scale Converr</title>
+    <title>Temperature Scale Converter</title>
     <link rel="stylesheet" href="converter.css">
 </head>
 <body>
